# jmap-client

./: CHANGELOG.md  CNAME  Cargo.toml  README.md  flake.nix
examples/: eventsource.rs  mailboxes.rs  messages.rs  result_reference.rs  websocket.rs
src/: client.rs  client_ws.rs  lib.rs
src/blob/: copy.rs  download.rs  helpers.rs  helpers_blocking.rs  mod.rs  upload.rs
src/core/: changes.rs  copy.rs  error.rs  get.rs  mod.rs  query.rs  query_changes.rs  request.rs  response.rs  session.rs  set.rs
src/email/: get.rs  helpers.rs  helpers_blocking.rs  import.rs  mod.rs  parse.rs  query.rs  search_snippet.rs  set.rs
src/email_submission/: get.rs  helpers.rs  helpers_blocking.rs  mod.rs  query.rs  set.rs
src/event_source/: mod.rs  parser.rs  stream.rs
src/identity/: get.rs  helpers.rs  helpers_blocking.rs  mod.rs  set.rs
src/mailbox/: get.rs  helpers.rs  helpers_blocking.rs  mod.rs  query.rs  set.rs
src/principal/: get.rs  helpers.rs  helpers_blocking.rs  mod.rs  query.rs  set.rs
src/push_subscription/: get.rs  helpers.rs  helpers_blocking.rs  mod.rs  set.rs
src/sieve/: get.rs  helpers.rs  helpers_blocking.rs  mod.rs  query.rs  set.rs  validate.rs
src/thread/: get.rs  helpers.rs  helpers_blocking.rs  mod.rs
src/vacation_response/: get.rs  helpers.rs  helpers_blocking.rs  mod.rs  set.rs
