[package]
name = "jmap-client"
description = "JMAP client library for Rust"
version = "0.1.0"
edition = "2018"
authors = [ "Stalwart Labs Ltd. <hello@stalw.art>"]
license = "Apache-2.0 OR MIT"
repository = "https://github.com/stalwartlabs/jmap-client"
homepage = "https://github.com/stalwartlabs/jmap-client"
keywords = ["jmap", "email", "mime", "mail", "e-mail"]
categories = ["email"]
readme = "README.md"

[dependencies]
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"]}
#reqwest = { version = "0.11", default-features = false, features = ["stream", "rustls-tls"]}
reqwest = { git = "https://github.com/stalwartlabs/reqwest.git", default-features = false, features = ["stream", "rustls-tls"]}
futures-util = "0.3"
async-stream = "0.3"
base64 = "0.13"
tokio-tungstenite = { version = "0.17", features = ["rustls-tls-webpki-roots"], optional = true}
tokio = { version = "1.16", default-features = false, features = ["io-util"], optional = true }
parking_lot = "0.12.0"
ahash = {version = "0.7.6", features = ["serde"]}

[features]
default = []
websockets = ["tokio", "tokio-tungstenite"]
debug = []

[profile.bench]
debug = true
