[package]
name = "jmap-client"
description = "JMAP client library for Rust"
version = "0.3.0"
edition = "2021"
authors = [ "Stalwart Labs Ltd. <hello@stalw.art>"]
license = "Apache-2.0 OR MIT"
repository = "https://github.com/stalwartlabs/jmap-client"
homepage = "https://github.com/stalwartlabs/jmap-client"
keywords = ["jmap", "email", "mail", "e-mail"]
categories = ["email"]
readme = "README.md"
resolver = "2"

[dependencies]
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"]}
tokio-tungstenite = { version = "0.19", features = ["rustls-tls-webpki-roots"], optional = true}
tokio = { version = "1.16", default-features = false, features = ["io-util"], optional = true }
futures-util = { version = "0.3", optional = true}
async-stream = { version = "0.3", optional = true}
rustls = { version = "0.21.0", features = ["dangerous_configuration"], optional = true }
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"]}
ahash = {version = "0.8", features = ["serde"]}
parking_lot = "0.12"
base64 = "0.13"
maybe-async = "0.2"

[features]
default = ["async"]
async = ["futures-util", "async-stream", "reqwest/stream"]
websockets = ["tokio", "tokio-tungstenite", "rustls"]
blocking = ["reqwest/blocking", "maybe-async/is_sync"]
debug = []

[lib]
doctest = false

[profile.bench]
debug = true
